Set theme jekyll-theme-modernist

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-modernist
 title: Philippa Grace McCabe
 description: Machine Learning Group - PhD Student at Liverpool John Moores University - Funded by OActive
 
