--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Philippa Grace McCabe
-description: Machine Learning Group - PhD Student at Liverpool John Moores University - Funded by OActive
+description: Machine Learning Research Group - PhD Researcher at Liverpool John Moores University - Funded by OActive
 
 navbar-links:
   About Me: "aboutme"
